# file-sharing

./: .gitignore  Cargo.toml  Makefile
eng/: file-sharing.service
file-sharing-ui/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
file-sharing-ui/src/app/: page.tsx
file-sharing-ui/src/app/components/: DragDropUploader.tsx  FileList.tsx  FileUploader.tsx
file-sharing-ui/src/app/file-list/: page.tsx
src/: config.rs  main.rs  ws.rs
src/api/v1/: mod.rs
src/api/v1/clipboard/: clipboard.rs
src/api/v1/upload/: mod.rs
src/db/: redis.rs
