[package]
name = "file-sharing"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
futures-util = "0.3.17"
sanitize-filename = "0.5"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"

